fix: replaces candadite images 7 and 8 and cleans up spacing on process page

--- a/src/process/process.scss
+++ b/src/process/process.scss
@@ -75,7 +75,7 @@
 
     .matching-content {
       padding-top: 100px;
-      padding-bottom: 100px;
+      padding-bottom: 30px;
 
       .matching-title {
         font-size: 62px;
@@ -93,6 +93,7 @@
 
       .feature {
         margin-right: 40px;
+        margin-bottom: 70px;
       }
     }
 
@@ -100,7 +101,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      margin-bottom: -160px;
+      margin-bottom: -10%;
     }
 
     .candadite {
@@ -111,7 +112,7 @@
 
       .candadite-status {
         position: absolute;
-        bottom: 20px;
+        bottom: 0px;
         right: 5px;
       }
     }
